# igxi

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ccpp.yml
include/igxi/: deps.hpp  igxi.hpp
src/igxi/: igxi.cpp
